# PE-SGD

./: .gitignore  LICENSE  README.md  pyproject.toml  run_script.sh
data/biorxiv/: dev.csv  test.csv
data/congressional/: test.csv
data/pubmed/: dev.csv  test.csv
examples/: main_text.py
examples/prompt/archehrqa/: random_api_prompt.json  variation_api_prompt.json
examples/prompt/archehrqa2/: random_api_prompt.json  variation_api_prompt.json
examples/prompt/biorxiv/: random_api_prompt.json  variation_api_prompt.json
examples/prompt/congressional/: random_api_prompt.json  variation_api_prompt.json
examples/prompt/pubmed/: random_api_prompt.json  variation_api_prompt.json
pesgd/: __init__.py  data_loader.py  privacy_engine.py
pesgd/accountants/: accountant.py  prv.py  utils.py
pesgd/data/: __init__.py  data.py  data_utils.py
pesgd/data/text/: __init__.py  text_csv.py
pesgd/embedding/image/: fld_inception.py  inception.py
pesgd/embedding/text/: sentence_transformer.py
pesgd/grad_sample/: __init__.py  functorch.py  grad_sample_module.py  grad_sample_module_fast_gradient_clipping.py  gsm_base.py  utils.py
pesgd/llm/: __init__.py  constant.py  ghostsuite.py  sample_grad.py
pesgd/llm/fine_tune/: fine_tuned_model_eval.py  image_dataset_processing.py  instruction_addition.py  loss_calculation.py  metric_logging_plotting.py  opacus_dpsgd.py  sft.py  trainer.py  trainer_image.py  weighted_ft.py
pesgd/llm/ghostEngines/: accumulate_autograd_grad_sample_dotprod.py  accumulate_graddotprod_engine.py  autograd_grad_sample_dotprod.py  graddotprod_engine.py  gradnorm_engine.py  supported_layers_grad_samplers_dotprod.py  transformers_support.py
pesgd/logging/: __init__.py
pesgd/optimizers/: __init__.py  dp_optimizer.py  optimizer.py  optimizer_fast_gradient_clipping.py  perlayeroptimizer.py
pesgd/population/: __init__.py  pesgd_population.py
pesgd/schedulers/: grad_clip_scheduler.py  noise_scheduler.py
pesgd/utils/: batch_memory_manager.py  fast_gradient_clipping_utils.py  module_utils.py
pesgd/validators/: __init__.py  gru.py  instance_norm.py  lstm.py  module_validator.py  multihead_attention.py  utils.py
(+5 files in other folders)
